# visual_easy_slam

./: CMakeLists.txt  README.md  package.xml
config_samples/: freiburg2_desk.json
src/: Converters.cpp  Converters.hpp  DataframeData.hpp  ImageData.hpp  NodeDataframeCreator.cpp  NodeDataframeCreator.hpp  NodeDisplayPoseText.cpp  NodeDisplayPoseText.hpp  NodeImageDisplay.cpp  NodeImageDisplay.hpp  NodeImageStream.cpp  NodeImageStream.hpp  NodeStereoCamera.cpp  NodeStereoCamera.hpp  NodeVisualOdometry.cpp  NodeVisualOdometry.hpp  PoseData.hpp  main.cpp
src/data_types/: CalibrationData.hpp  ImageData.hpp  PointCloudData.hpp  StringData.hpp
src/nodes/operations/: NodeDataframeCreator.cpp  NodeDataframeCreator.hpp  NodeVisualOdometry.cpp  NodeVisualOdometry.hpp
src/nodes/outputs/: NodeDisplay3D.cpp  NodeDisplay3D.hpp  NodeDisplayPoseText.cpp  NodeDisplayPoseText.hpp  NodeImageDisplay.cpp  NodeImageDisplay.hpp  NumberDisplayDataModel.cpp  NumberDisplayDataModel.hpp
src/nodes/sources/: NodeImageStream.cpp  NodeImageStream.hpp  NodeStereoCamera.cpp  NodeStereoCamera.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp  StringSourceData.cpp  StringSourceData.hpp
