<?xml version="1.0"?>
<package>
  <name>slam_mark_i</name>
  <version>0.0.1</version>
  <description> test </description>

  <maintainer email="ricloplop@gmail.com">ricloplop</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rgbd_tools</build_depend>
  <build_depend>sparse_bundle_adjustment</build_depend>
  <run_depend>sparse_bundle_adjustment</run_depend>
  <run_depend>rgbd_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  
  <export>

  </export>
</package>

